# Remy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/retrieval/: baseline_report.json  benchmark_v1.yaml  current_c03_hardened.json  current_c03_retry1.json  current_hardened.json  current_phase2.json  current_phase3.json  current_report.json  dbg_c02.json  phase1_report.json  phase2_report.json  phase4_report.json  run_benchmark.py
docs/: BRAIN_HEALTH.md  FACTUALITY_VERIFICATION.md  MEMORY_ARCHITECTURE.md
scripts/: autonomy_benchmark.py  autonomy_live_validation.py  bench_aura_detailed.py  bench_aura_live.py  brain_cleanup.py  check_wallet.py  cleanup_brain.py  cleanup_eval_metrics.py  harvest_security_ops.py  inspect_brain.py  memory_audit.py  reconcile_recovered_brain_records.py  recover_brain_backup.py  replay_history_to_brain.py  setup_identity.py  test_acl_brief_large_transcript.py  test_acl_brief_vs_transcript.py  verify_agent.py
src/remy/: __init__.py  desktop_entry.py  main.py
src/remy/config/: __init__.py  pricing.json  settings.py
src/remy/contracts/: harness_charter.yaml  harness_eval_matrix.yaml  harness_migration_manifest.yaml  harness_modules.yaml  role_contracts.yaml  runtime_contract.yaml  script_adapter_registry.yaml  state_semantics.yaml
src/remy/core/: __init__.py  acl_renderer.py  activity_state.py  adaptive_model_router.py  agent.py  agent_tools.py  approval_queue.py  audit_trail.py  autonomy.py  autonomy_benchmarks.py  autonomy_critique.py  (+117 more)
tests/: conftest.py  test_a81_recall_containment.py  test_a8_retrieval_boundary.py  test_a9_admission_classes.py  test_action_plans.py  test_activity_serialization.py  test_activity_state.py  test_adaptive_model_router.py  test_adaptive_roles.py  test_adaptive_strategy.py  test_agent.py  test_agent_recursion.py  test_agent_tools.py  test_agent_tools_shutdown.py  test_agent_tools_startup_recovery.py  test_api_knowledge.py  test_approval_queue.py  test_async_runner.py  test_audit_trail.py  test_aura_cognitive_ops_compression.py  test_aura_v210_integration.py  test_automation_routes.py  test_autonomous_research.py  test_autonomy.py  test_autonomy_benchmarks.py  test_autonomy_live_validation.py  test_autonomy_live_validation_routes.py  test_autonomy_reliability.py  test_autonomy_scar_warning.py  test_autonomy_status_payload.py  test_background_brain.py  test_behavioral_rules.py  test_blocked_goals.py  test_brain_tools.py  test_browser.py  test_browser_failure_memory.py  test_browser_memory_integration.py  test_browser_worker.py  test_budget_negotiation.py  test_capability_packs.py  (+135 more)
tests/e2e/: conftest.py  test_auth.py  test_chat.py  test_memory.py  test_navigation.py  test_settings.py  test_tasks.py
tests/sandbox_tools/: test_capsolver_manager_tool.py  test_sms_man_manager_tool.py
tools/: __init__.py
tools/authoring/: __init__.py  knowledge_harvester.py
tools/maintenance/: __init__.py  maintenance_cron.py
tools/validation/: __init__.py  thermal_accelerated_soak.py  thermal_high_signal_tests.py  thermal_longitudinal_soak.py  thermal_runtime_validation.py
(+215 files in other folders)
